Refactored CommentsDisplay and CommentsCard, along with CSS in index.css, to design a readable comments section for small screen. Must next deal with deeply nested issue and address larger screens.

--- a/src/index.css
+++ b/src/index.css
@@ -280,6 +280,31 @@
   @apply text-red-500 text-sm;
 }
 
+/* -- COMMENTS -- */
+
+.comment-card-container.child-comment {
+  @apply bg-gray-100
+}
+
+.comment-card-container.expanded {
+  @apply shadow-md shadow-green-950 bg-white
+}
+
+.nested-comments-wrapper {
+  @apply flex relative
+}
+
+.vertical-line {
+
+  @apply w-0.5 bg-gray-200 absolute top-0 bottom-0 left-0 
+
+}
+
+.nested-comments {
+  @apply ml-2 w-full
+  
+}
+
 /* -- COMMENT INPUT -- */
 
 .join-to-comment {
@@ -297,7 +322,7 @@
 /* -- COMMENT CARD -- */
 
 .comment-card-container {
-  @apply shadow-emerald-950 shadow-lg rounded p-2 my-4;
+  @apply border border-gray-400 rounded-lg p-2 my-3 cursor-pointer text-sm;
 }
 
 /* -- ABOUT -- */
